feat: prototype tooltip pdf and text

--- a/packages/discovery-styles/scss/discovery-components.scss
+++ b/packages/discovery-styles/scss/discovery-components.scss
@@ -4,6 +4,7 @@
 @import 'components/results-pagination/results-pagination';
 @import 'components/document-preview/document-preview';
 @import 'components/document-preview/document-preview-toolbar';
+@import 'components/document-preview/document-preview-tooltip';
 @import 'components/document-preview/document-preview-pdf-fallback';
 @import 'components/document-preview/document-preview-pdf-viewer';
 @import 'components/document-preview/document-preview-html';
